Update format for parser-doninturflot-stopover